                                Persistence Utils Change Log

-----------------------------------------------------------------------------------------

1.1.0 - SNAPSHOT
      - Added class Defs.
      - Added class JsonAttributeConverter.

-----------------------------------------------------------------------------------------

1.0.0 - 2019-07-16
      - First public release.