@@ -49,6 +49,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.2.0.RELEASE</version>
+			<optional>true</optional>
+		</dependency>
+
 	</dependencies>
 
 	<build>
